[gd_scene load_steps=3 format=3 uid="uid://bkiq65p64iioy"]

[ext_resource type="Script" path="res://spaceship/spaceship.gd" id="1_3gigf"]
[ext_resource type="Texture2D" uid="uid://cb3i5a5qhngxx" path="res://spaceship/Spaceship_1.png" id="2_8goxo"]

[node name="Spaceship" type="CharacterBody2D" groups=["Player"]]
collision_mask = 3
script = ExtResource("1_3gigf")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8goxo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.436318, 0.436318)
polygon = PackedVector2Array(-71, -11, -240.65, 59.5896, -242.942, 112.303, -75, 113, -75, 145, 75, 145, 75, 113, 245.234, 110.012, 242.942, 61.8815, 70, -12, 57, -88, 33, -131, 0, -146, -32, -131, -58, -90)

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -150)

[node name="ShootingCooldown" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="ShootingCooldown" to="." method="_on_shooting_cooldown_timeout"]
